# ParlayANN

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE  hybrid-ann.sh
algorithms/: CMakeLists.txt  README.md  tutorial.sh
algorithms/HCNNG/: CMakeLists.txt  Makefile  clusterEdge.h  hcnng.sh  hcnng_index.h  neighbors  neighbors.h  parlay
algorithms/HNSW/: CMakeLists.txt  HNSW.hpp  debug.hpp  dist.hpp  h5_ops.hpp  type_point.hpp
algorithms/IVF/: IVF.h  bitvector.h  clustering.h  compile.sh  ivf_test.cpp  posting_list.h
algorithms/SPANN/: ClusterIndex.h  SPANN_index.h  neighbors.h  trivial_hcnng.h
algorithms/bench/: BUILD  IO.h  MakeBench  Makefile  benchUtils.h  get_time.h  neighborsTime.C  parallelDefsANN  time_loop.h
algorithms/kmeans/: BUILD  README.md  abench.sh  akmeans.sh  bench.cpp  bkmeans.sh  distance.h  initialization.h  kmeans.cpp  kmeans.h  kmeans_bench.h  lsh.h  naive.h  naive2.h  parse_files.h  test.sh  yy.h
algorithms/pyNNDescent/: CMakeLists.txt  Makefile  clusterPynn.h  neighbors.h  pynn_index.h
algorithms/range_filter_tree/: postfilter_vamana.h  prefiltering.h  range_filter_tree.h
algorithms/single-probe-lsh/: Makefile  essentials.h  lsh.h  neighbors.h  parallel_lsh.h  parameters.h
algorithms/stitched_vamana/: neighbors.h  stitched_vamana.h
algorithms/utils/: BUILD  NSGDist.h  aspen_flat_graph.h  aspen_graph.h  aspen_graph_v2.h  beamSearch.h  beamSearch_main.h  check_nn_recall.h  check_range_recall.h  clusterEdge.h  clusterPynn.h  csr_matrix.h  csvfile.h  doublingSearch.h  doubling_search.h  dynamic_point_range.h  earlyStopping.h  epoch.h  euclidian_point.h  filteredBeamSearch.h  filtered_hashset.h  filters.h  graph.h  graph_reorder.h  graph_template.h  hashset.h  index.h  indexTools.h  jl_point.h  kStarBeamSearch.h  mips_point.h  mmap.h  parse_files.h  parse_results.h  point_range.h  rangeSearch.h  range_search.h  scalar_quantize.h  simpleGraph.h  stats.h  (+3 more)
algorithms/vamana/: BUILD  CMakeLists.txt  Makefile  aspen  bigann.out  bigann_ivf.csv  index.h  index_test.cc  neighbors  neighbors.h  neighbors.sh  neighbors_test.cc  parlay_vamana_res.csv  parlay_vamana_results.csv  results.csv  test.csv  test_parallel.out
algorithms/vamana/scripts/: OpenAIArXiv  big_1  big_10  big_100  big_1_range  deep10M  fashion  gist  gist_1  glove100  glove100_range  glove25  msmarco_websearch  nytimes  sift  sift100  sift_range  space_1  space_10  space_1_range  t2i_1  t2i_10  t2i_1_range  wikipedia_cohere
algorithms/vamanaRange/: CMakeLists.txt  Makefile  index.h  neighbors.h  parlay
data_tools/: CMakeLists.txt  Makefile  build_knn_graph.cpp  bvec_to_u8bin.cpp  compute_groundtruth  compute_groundtruth.cpp  compute_range_groundtruth  compute_range_groundtruth.cpp  crop.cpp  data_union  data_union.cpp  data_union.sh  evaluate_partitioning.cpp  graph_analysis.cpp  graph_stats  graph_stats.cpp  graph_stats.sh  kaminpar_graphbuilder.h  match_base_search.cpp  match_base_search.sh  parlay  random_sample  random_sample.cpp  range_utils.cpp  run_vbase_graph.sh  testresults.md  threshold_histo  threshold_histo.cpp  threshold_histo.sh  utils  vbase_graph.cpp  vec_to_bin  vec_to_bin.cpp
dataset_evaluation/: Makefile  create_bar_chart.py  dataset_info.py  qps_recall.sh  range_radius.cpp  range_res_histogram.py  run_faiss.py  run_qps_recall_earlystopping_experiment.py  run_qps_recall_experiment.py  run_range_radius_experiment.py  run_visited_experiment.py  utils.py
docs/: README.md  algorithms.md  data_tools.md  quickstart.md  rangesearch.md
ivf_algorithms/bench/: Makefile  ivfGraphTime.C  ivfTime.C
ivf_algorithms/ivf/: Makefile  check_ivf_range_recall.h  check_ivf_recall.h  clustering.h  ivf.h  ivfGraph.h  ivf_test.cpp  posting_list.h  utils
ivf_algorithms/kmeans/: Makefile  bigann_ivf.csv  ivf  ivf.h  ivfGraph.h
misc_python_functions/: generate_vbase_graph.sh  vbase_graph.py
pyann/: _files.py  builder.cpp  compile.sh  defaults.py  module.cpp  test.py
python/: __init__.py  _builder.py  _builder.pyi  _common.py  big_env.yml  builder.cpp  compile.sh  compile_and_run.sh  dataset_correlation.ipynb  dataset_correlation.py  dataset_exploration.ipynb  debug_compile.sh  defaults.py  environment.yml  filtered_dataset.h  filtered_gt.py  graph_analysis.ipynb  graph_index.cpp  k_star_test.py  memory_and_build.py  module.cpp  nyt_test.py  old_serial_query.h  openimages.py  parameter_search copy.py  parameter_search.ipynb  parameter_search.py  parameter_search_copy.py  partitionivf.py  prod_compile.sh  range_test.py  run_ablations.sh  run_parameter_search.sh  sift_test.py  stitched_vamana.py  test.py  unfiltered_search.ipynb  vamana_index.cpp  wiki_dataset.py  wrapper.py
python/scripts/: fashion_test.py  gist_test.py  glove100_test.py  glove25_test.py  nyt_test.py  sift_test.py
rangeSearch/bench/: .gitignore  Makefile  parallelDefsANN  rangeTime.C
rangeSearch/vamanaRange/: BIGANN_10M_radii.sh  Makefile  SSNPP.out  SSNPP_doublebeamsame_sp.out  SSNPP_doublebeamsame_sp_one_thread.out  SSNPP_doublebeamstartpointopt_one_thread.out  SSNPP_doublebeamstartpointopt_tr_limit.out  SSNPP_doublebeamupdate_sp.out  SSNPP_doublebeamupdate_sp_tr_limit.out  SSNP_doublebeamstartpointopt.out  beamsearchandrangesearch_onethread.sh  bigann.out  bigann_double.out  bigann_double_beam.out  bigann_double_beam2.out  deep.out  (+49 more)
tests/: bench
(+138 files in other folders)
